--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "compromise": "11.12.0",
     "formik": "1.3.0",
     "graphql": "14.0.2",
+    "markdown-it": "8.4.2",
+    "markdown-it-jsx": "1.1.0",
+    "markdown-to-jsx": "6.7.4",
+    "marked": "0.5.1",
     "moment": "2.22.2",
     "polished": "2.0.3",
     "react": "^16.5.1",
     "react-apollo": "2.1.11",
     "react-datepicker": "1.6.0",
     "react-dom": "16.5.2",
+    "react-mentions": "2.3.1",
     "react-scripts": "1.1.5",
     "react-select": "2.0.0",
     "recompose": "0.30.0",
