--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "0.1.16",
     "axios": "0.18.0",
     "compromise": "11.12.0",
+    "cytoscape": "3.2.18",
     "formik": "1.3.0",
     "graphql": "14.0.2",
     "markdown-it": "8.4.2",
