--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.5.2",
     "react-mentions": "2.3.1",
     "react-outside-click-handler": "1.2.2",
+    "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
     "react-select": "2.0.0",
     "recompose": "0.30.0",
