process creation wip

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "polished": "2.0.3",
     "react": "^16.5.1",
     "react-apollo": "2.1.11",
+    "react-cytoscapejs": "1.0.1",
     "react-datepicker": "1.6.0",
     "react-dom": "16.5.2",
     "react-mentions": "2.3.1",
