--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "compromise": "11.12.0",
     "cytoscape": "3.2.18",
     "formik": "1.3.0",
+    "frappe-gantt": "0.3.0",
+    "frappe-gantt-react": "0.0.8",
+    "gantt-for-react": "0.2.0",
     "graphql": "14.0.2",
     "markdown-it": "8.4.2",
     "markdown-it-jsx": "1.1.0",
