--- a/package.json
+++ b/package.json
@@ -6,31 +6,26 @@
     "apollo-boost": "0.1.16",
     "axios": "0.18.0",
     "compromise": "11.12.0",
-    "cytoscape": "3.2.18",
     "formik": "1.3.0",
-    "frappe-gantt": "0.3.0",
-    "frappe-gantt-react": "0.0.8",
-    "gantt-for-react": "0.2.0",
     "graphql": "14.0.2",
-    "markdown-it": "8.4.2",
-    "markdown-it-jsx": "1.1.0",
     "markdown-to-jsx": "6.7.4",
-    "marked": "0.5.1",
     "moment": "2.22.2",
     "polished": "2.0.3",
     "react": "^16.5.1",
     "react-apollo": "2.1.11",
-    "react-cytoscapejs": "1.0.1",
     "react-datepicker": "1.6.0",
     "react-dom": "16.5.2",
-    "react-mentions": "2.3.1",
     "react-outside-click-handler": "1.2.2",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
     "react-select": "2.0.0",
+    "react-tabs": "2.3.0",
+    "react-visjs-timeline": "1.5.0",
+    "reactjs-popup": "1.3.1",
     "recompose": "0.30.0",
     "styled-components": "4.0.0-beta.7",
     "styled-media-query": "2.0.2",
+    "vis": "4.19.1",
     "yup": "0.26.5"
   },
   "scripts": {
