--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "compromise": "11.12.0",
     "formik": "1.3.0",
     "graphql": "14.0.2",
+    "griddle-react": "1.13.1",
     "markdown-to-jsx": "6.7.4",
+    "match-sorter": "2.3.0",
     "moment": "2.22.2",
     "polished": "2.0.3",
     "react": "^16.5.1",
@@ -20,6 +22,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
     "react-select": "2.0.0",
+    "react-table": "6.8.6",
     "react-tabs": "2.3.0",
     "react-visjs-timeline": "1.5.0",
     "reactjs-popup": "1.3.1",
