--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/graphql": "14.0.3",
+    "@types/jest": "23.3.10",
+    "@types/node": "10.12.12",
+    "@types/react": "16.7.13",
+    "@types/react-dom": "16.0.11",
+    "@types/react-router-dom": "4.3.1",
+    "@types/react-select": "2.0.10",
+    "@types/recompose": "0.30.0",
+    "@types/styled-components": "4.1.3",
     "apollo-boost": "0.1.16",
     "axios": "0.18.0",
-    "formik": "1.3.0",
+    "formik": "1.3.1",
     "graphql": "14.0.2",
     "moment": "2.22.2",
     "polished": "2.0.3",
@@ -15,7 +24,7 @@
     "react-dom": "16.5.2",
     "react-outside-click-handler": "1.2.2",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.1.1",
     "react-select": "2.0.0",
     "react-table": "6.8.6",
     "react-tabs": "2.3.0",
@@ -31,5 +40,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "5.2.1",
+    "babel-plugin-styled-components": "1.9.2",
+    "source-map-loader": "0.2.4",
+    "typescript": "3.2.1"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
